<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="tie">It\'s a Tie! Nobody wins!</string>
    <string name="win">You Win the game!</string>
    <string name="lose">You Lose the game!</string>
    <string name="flip_coin_message">Now we shall flip a coin! \nWhat do you choose?</string>
    <string name="heads">Heads</string>
    <string name="tails">Tails</string>
    <string name="player_first">Player moves first!</string>
    <string name="opponent_first">Opponent moves first!</string>
    <string name="player_move_text">Your move!</string>
    <string name="player_text">PLAYER:</string>
    <string name="opponent_text">OPPONENT:</string>
    <string name="restart_the_game">Restart the game</string>
    <string name="x" translatable="false">X</string>
    <string name="o" translatable="false">O</string>
</resources>
